# cli-painter-challenge

./: .gitignore  README.es.md  README.md  pyproject.toml  requirements.txt
painter/: cli.py  model.py
tests/: test_model.py
