[tool.poetry]
name = "painter"
version = "0.1.0"
description = ""
authors = ["Jesus Hincapie <jahlon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pytest = "^8.3.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
painter = 'painter.cli:painter'